--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           </div>
         </div>
     		<div class="row no-gutters">
-    			<div class="col-md-4">
+    			<div class="col-12">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -208,7 +208,7 @@
 	    				</div>
     				</div>
   				</div>
-				  <div class="col-md-4">
+				  <div class="col-12">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -217,7 +217,7 @@
 	    				</div>
     				</div>
   				</div>
-				  <div class="col-md-4">
+				  <div class="col-12">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
@@ -241,7 +241,7 @@
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-8 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
@@ -252,7 +252,7 @@
 	            </div>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-8 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
@@ -263,7 +263,7 @@
 		          </div>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-8 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box text-center p-4 shadow">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
